<resources>
    <string name="app_name">4te Herren Statistiken</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_message_error">The following error occurred while fetching or processing data:  %s</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>
    <string name="spiel_liste">Games</string>
    <string name="threes_made">3PM</string>
    <string name="fouls">Fouls</string>
    <string name="name">Name</string>
    <string name="freiwurfquote">Freethrow %</string>
    <string name="geworfene_freiwuerfe">Thrown Freethrows</string>
    <string name="getroffene_freiwuerfe">Made Freethrows</string>
    <string name="spielid">Game ID</string>
    <string name="punkte">Points</string>
    <string name="punkte_ges">Points(all)</string>
    <string name="Datum_auswählen">choose date</string>
    <string name="Spieler_auswählen">choose Players</string>
    <string name="Saison">Season</string>
    <string name="abbrechen">Cancel</string>
    <string name="punkte_pro_spiel">Points per Game</string>
    <string name="neues_spiel_hinzufuegen">Neues Spiel hinzufügen</string>
    <string name="hier_stats_eintragen">enter stats here.</string>
    <string name="datum">Datum</string>
    <string name="gegner">Opponent</string>
    <string name="Gegner_hint">Schreibe den Ort.</string>
    <string name="gamecount">Spielanzahl</string>
    <string name="ende">Finished ! You can now upload the Data via the Basketball icon.</string>
    <string name="send_description">Press to send Data to Server</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="gegner_punkte">Opponent Points</string>
    <string name="unsere_punkte">Team Points</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="games">Games</string>
    <string name="player">Player</string>
    <string name="teamname">Team Name</string>
    <string name="game">Game</string>
    <string name="viertel1">1st Quarter</string>
    <string name="viertel2">2nd Quarter</string>
    <string name="viertel3">3rd Quarter</string>
    <string name="viertel4">4th Quarter</string>
    <string name="team">Team</string>
    <string name="herren">4te Herren</string>
    <string name="button_hint">Add new Game</string>
    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="loading_message">Uploading image. Please wait.</string>
</resources>