<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="8">

    <TextView
        android:id="@+id/attended_Games"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:minWidth="250dp"
        android:text="@string/gamecount"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Spielanzahl" />

    <TextView
        android:id="@+id/all_points_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/punkte_ges"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/points_per_game_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/punkte_pro_spiel"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/threes_made_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/threes_made"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="3 Punkte Würfe" />

    <TextView
        android:id="@+id/freethrows_percentage_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/freiwurfquote"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/freethrows_thrown_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/geworfene_freiwuerfe"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="geworfene Freiwürfe" />

    <TextView

        android:id="@+id/freethrows_made_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/getroffene_freiwuerfe"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="getroffene Freiwürfe" />

    <TextView

        android:id="@+id/fouls_season"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/fouls"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Fouls" />

</LinearLayout>