<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/default_vertical_padding">


    <TextView
        android:id="@+id/teamname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/teamname"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/HeaderTotalPoints"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:minWidth="500dp"
        android:text="@string/punkte_ges"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/HeaderQuarter1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/viertel1"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/HeaderQuarter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/viertel2"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/HeaderQuarter3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/viertel3"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/HeaderQuarter4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/viertel4"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />


</LinearLayout>