<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/default_vertical_padding"
    >

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/datum"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/enemy_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/gegner_punkte"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/our_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/unsere_punkte"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

</LinearLayout>