<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/default_vertical_padding"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/all_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/punkte_ges"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/points_per_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/punkte_pro_spiel"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/freethrow_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/freiwurfquote"
        android:textSize="@dimen/stat_textsize"
        android:textStyle="bold" />

</LinearLayout>