<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8">

                <TextView
                    android:id="@+id/attended_Games"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/gamecount"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="Spielanzahl" />

                <TextView
                    android:id="@+id/all_points_season"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/punkte_ges"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/points_per_game_season"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/punkte_pro_spiel"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/threes_made_season"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/threes_made"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="3 Punkte Würfe" />

                <TextView
                    android:id="@+id/freethrows_percentage_season"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/freiwurfquote"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/freethrows_thrown_season"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/geworfene_freiwuerfe"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="geworfene Freiwürfe" />

                <TextView

                    android:id="@+id/freethrows_made_season"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/getroffene_freiwuerfe"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="getroffene Freiwürfe" />

                <TextView

                    android:id="@+id/fouls_season"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fouls"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="Fouls" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/player_season_item" />

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>