<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <HorizontalScrollView
        android:id="@+id/horizontalView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/GameID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/player"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="Spieler" />

                <TextView
                    android:id="@+id/Points"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/punkte"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold" />


                <TextView

                    android:id="@+id/freethrows_made"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/getroffene_freiwuerfe"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="getroffene Freiwürfe" />

                <TextView

                    android:id="@+id/freethrows_thrown"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/geworfene_freiwuerfe"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="geworfene Freiwürfe" />

                <TextView
                    android:id="@+id/HeaderFreethrows"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minWidth="290dp"
                    android:text="@string/freiwurfquote"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/threes_made"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/threes_made"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="3 Punkte Würfe" />

                <TextView

                    android:id="@+id/fouls"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fouls"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="Fouls" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_spieler_spieleliste" />

        </LinearLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>