<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/team"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/team"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="Team" />

                <TextView
                    android:id="@+id/gesamtpunkte"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:minWidth="500dp"
                    android:text="@string/punkte_ges"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/viertel1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/viertel1"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="1.Viertel" />

                <TextView
                    android:id="@+id/viertel2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/viertel2"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="2.Viertel" />

                <TextView
                    android:id="@+id/viertel3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/viertel3"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold" />

                <TextView

                    android:id="@+id/viertel4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/viertel4"
                    android:textSize="@dimen/header_textsize"
                    android:textStyle="bold"
                    tools:text="4.Viertel" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_spieldetails_layout" />

        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>